PLC-3: PLCnext authentication adapted